added greedy agent files

--- a/experiments/episodes_parity_data/Greedy_Episode_parity.ipynb
+++ b/experiments/episodes_parity_data/Greedy_Episode_parity.ipynb
@@ -43,13 +43,13 @@
     "module_path = os.path.abspath(os.path.join('..', '..', 'environment'))\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
-    "from environment import Job, Candidate, Environment\n",
+    "from environment_basic import Job, Candidate, Environment\n",
     "\n",
     "# Agent requirements\n",
     "module_path = os.path.abspath(os.path.join('..', '..', 'agents'))\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
-    "from agents import GreedyAgent\n",
+    "from agents_basic import GreedyAgent\n",
     "\n",
     "# Tool requirements\n",
     "module_path = os.path.abspath(os.path.join('..', '..', 'tools'))\n",
@@ -155,11 +155,11 @@
    ],
    "source": [
     "# Read in the job data\n",
-    "file_path = '../../data/jobs_data_cleaned.csv'\n",
+    "file_path = '../../data/cleaned_data/jobs_cleaned.csv'\n",
     "jobs_df = pd.read_csv(file_path)\n",
     "\n",
     "# Read in the candidate data\n",
-    "file_path = '../../data/candidates_data_cleaned.csv'\n",
+    "file_path = '../../data/cleaned_data/candidates_cleaned.csv'\n",
     "candidates_df = pd.read_csv(file_path)\n",
     "\n",
     "# Create a parity data set\n",
@@ -571,8 +571,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save the greedy results with the old state representation in a csv\n",
-    "greedy_results_df.to_csv(\"greedy_results_parity_data.csv\")"
+    "# Save the greedy results in a csv\n",
+    "greedy_results_df.to_csv(\"greedy_results_parity.csv\")"
    ]
   }
  ],
