--- a/experiments/episodes_proportional_data/Greedy_Episode_proportional.ipynb
+++ b/experiments/episodes_proportional_data/Greedy_Episode_proportional.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"text-align: center;\">GREEDY EPISODE (PARITY DATA)</h1>"
+    "<h1 style=\"text-align: center;\">GREEDY EPISODE (PROPORTIONAL DATA)</h1>"
    ]
   },
   {
@@ -43,13 +43,13 @@
     "module_path = os.path.abspath(os.path.join('..', '..', 'environment'))\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
-    "from environment import Job, Candidate, Environment\n",
+    "from environment_basic import Job, Candidate, Environment\n",
     "\n",
     "# Agent requirements\n",
     "module_path = os.path.abspath(os.path.join('..', '..', 'agents'))\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
-    "from agents import GreedyAgent\n",
+    "from agents_basic import GreedyAgent\n",
     "\n",
     "# Tool requirements\n",
     "module_path = os.path.abspath(os.path.join('..', '..', 'tools'))\n",
@@ -132,10 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. INITIALISE THE DATA\n",
-    "\n",
-    "- 333947/1846122 = 18 % women\n",
-    "- 1512175/1846122 = 82 % men"
+    "## 2. INITIALISE THE DATA"
    ]
   },
   {
@@ -158,11 +155,11 @@
    ],
    "source": [
     "# Read in the job data\n",
-    "file_path = '../../data/jobs_data_cleaned.csv'\n",
+    "file_path = '../../data/cleaned_data/jobs_cleaned.csv'\n",
     "jobs_df = pd.read_csv(file_path)\n",
     "\n",
     "# Read in the candidate data\n",
-    "file_path = '../../data/candidates_data_cleaned.csv'\n",
+    "file_path = '../../data/cleaned_data/candidates_cleaned.csv'\n",
     "candidates_df = pd.read_csv(file_path)\n",
     "\n",
     "# Create a normalised data set, where women make up 18%\n",
@@ -176,9 +173,9 @@
     "required_men = new_dataset_size - total_women\n",
     "\n",
     "sampled_men_df = men_df.sample(n=required_men, random_state=1)\n",
-    "normalised_df = pd.concat([women_df, sampled_men_df], ignore_index=True)\n",
+    "proportional_df = pd.concat([women_df, sampled_men_df], ignore_index=True)\n",
     "\n",
-    "normalised_df['Gender'].value_counts()"
+    "proportional_df['Gender'].value_counts()"
    ]
   },
   {
@@ -205,11 +202,11 @@
     "    job_list.append(job)\n",
     "\n",
     "candidate_list = []\n",
-    "for i in range(len(normalised_df)):\n",
-    "    candidate = Candidate(i+1, normalised_df['Gender'][i], normalised_df['Degree_Bachelor'][i], normalised_df['Degree_Master'][i], normalised_df['Degree_Other'][i], \n",
-    "                          normalised_df['Software_Programming'][i], normalised_df['C_Programming'][i], normalised_df['Python_Programming'][i], \n",
-    "                          normalised_df['JavaScript_Programming'][i], normalised_df['Professional_Software_Experience'][i], \n",
-    "                          normalised_df['Management_Skills'][i], normalised_df['Engineer'][i], int(normalised_df['Previous_Pay'][i]))\n",
+    "for i in range(len(proportional_df)):\n",
+    "    candidate = Candidate(i+1, proportional_df['Gender'][i], proportional_df['Degree_Bachelor'][i], proportional_df['Degree_Master'][i], proportional_df['Degree_Other'][i], \n",
+    "                          proportional_df['Software_Programming'][i], proportional_df['C_Programming'][i], proportional_df['Python_Programming'][i], \n",
+    "                          proportional_df['JavaScript_Programming'][i], proportional_df['Professional_Software_Experience'][i], \n",
+    "                          proportional_df['Management_Skills'][i], proportional_df['Engineer'][i], int(proportional_df['Previous_Pay'][i]))\n",
     "    candidate_list.append(candidate)\n",
     "\n",
     "print(\"Job Data:\", len(job_list), \" Candidate Data:\", len(candidate_list))"
@@ -224,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +571,7 @@
        "3                 0.83           0.800000  normalised_data       No  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,12 +582,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save the greedy results with the old state representation in a csv\n",
-    "greedy_results_df.to_csv(\"greedy_results_normalised_data.csv\")"
+    "# Save the greedy results in a csv\n",
+    "greedy_results_df.to_csv(\"greedy_results_proportional.csv\")"
    ]
   }
  ],
