added experiment files

--- a/experiments/optimisation_initial_data/optimisation_DQN_initial.ipynb
+++ b/experiments/optimisation_initial_data/optimisation_DQN_initial.ipynb
@@ -60,13 +60,13 @@
     "module_path = os.path.abspath(os.path.join('..', '..', 'environment'))\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
-    "from environment import Job, Candidate, Environment\n",
+    "from environment_basic import Job, Candidate, Environment\n",
     "\n",
     "# Agent requirements\n",
     "module_path = os.path.abspath(os.path.join('..', '..', 'agents'))\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
-    "from agents import DQNAgent, DQN, ReplayBuffer\n",
+    "from agents_basic import DQNAgent, DQN, ReplayBuffer\n",
     "\n",
     "# Tool requirements\n",
     "module_path = os.path.abspath(os.path.join('..', '..', 'tools'))\n",
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -162,11 +162,11 @@
    ],
    "source": [
     "# Read in the job data\n",
-    "file_path = '../../data/jobs_data_cleaned.csv'\n",
+    "file_path = '../../data/cleaned_data/jobs_cleaned.csv'\n",
     "jobs_df = pd.read_csv(file_path)\n",
     "\n",
     "# Read in the candidate data\n",
-    "file_path = '../../data/candidates_data_cleaned.csv'\n",
+    "file_path = '../../data/cleaned_data/candidates_cleaned.csv'\n",
     "candidates_df = pd.read_csv(file_path)\n",
     "\n",
     "# Initialise the class objects with data from the dataframes\n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -301,8 +301,8 @@
       "   candidates  jobs  data_seed  dqn_seed  batch_size  gamma  epsilon  \\\n",
       "0         100    10          1         1          64   0.99      0.5   \n",
       "\n",
-      "   epsilon_min  epsilon_decay  learning_rate        total_reward  \n",
-      "0        0.001          0.995          0.001  ([Woman], -211399)  \n"
+      "   epsilon_min  epsilon_decay  learning_rate  total_reward  \n",
+      "0        0.001          0.995          0.001       -211399  \n"
      ]
     }
    ],
