--- a/experiments/episodes_parity_data/DQN_Episode_parity.ipynb
+++ b/experiments/episodes_parity_data/DQN_Episode_parity.ipynb
@@ -73,18 +73,23 @@
     "module_path = os.path.abspath(os.path.join('..', '..', 'environment'))\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
-    "from environment import Job, Candidate, Environment\n",
+    "from environment_basic import Job, Candidate, Environment\n",
     "\n",
     "module_path = os.path.abspath(os.path.join('..', '..', 'environment'))\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
-    "from environment_debias import EnvironmentDebiased\n",
+    "from environment_endorse import EnvironmentEndorse\n",
     "\n",
     "# Agent requirements\n",
     "module_path = os.path.abspath(os.path.join('..', '..', 'agents'))\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
-    "from agents import DQNAgent, DQN, ReplayBuffer\n",
+    "from agents_basic import DQNAgent, DQN, ReplayBuffer\n",
+    "\n",
+    "module_path = os.path.abspath(os.path.join('..', '..', 'agents'))\n",
+    "if module_path not in sys.path:\n",
+    "    sys.path.append(module_path)\n",
+    "from agents_endorse import DQNAgentEndorse, DQN, ReplayBuffer\n",
     "\n",
     "# Tool requirements\n",
     "module_path = os.path.abspath(os.path.join('..', '..', 'tools'))\n",
@@ -102,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,8 +160,8 @@
     "            print(f\"Episode {iteration}: Model loss = {loss}\")\n",
     "    \n",
     "    # Save and load the model\n",
-    "    agent.save_model('DQN_optimisation')\n",
-    "    agent.load_model('DQN_optimisation')\n",
+    "    agent.save_model('DQN_basic')\n",
+    "    agent.load_model('DQN_basic')\n",
     "        \n",
     "    gender_distribution, tot_reward = get_best_allocation(agent, env, show_schedule=True)\n",
     "\n",
@@ -165,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +203,7 @@
     "    # Add the results to results_df\n",
     "    new_row = pd.DataFrame([{\"agent\": \"DQN\", \"running_seed\": running_seed, \"sample_seed\": 1, \"num_jobs\": num_jobs, \"num_candidates\": num_candidates, \n",
     "                             \"reward\": total_reward,  \"sampled_men_percent\": sampled_men, \"hired_men_percent\": hired_men,\n",
-    "                             \"data\": 'parity_data', \"debiased\": 'No'}])\n",
+    "                             \"data\": 'parity_data', \"endorse\": 'No'}])\n",
     "    results_df = pd.concat([results_df, new_row], ignore_index=True)\n",
     "\n",
     "    return results_df, loss_list\n"
@@ -210,9 +215,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_dqn_agent_debiased(sample_jobs, sample_candidates, batch_size, gamma, epsilon, epsilon_min, epsilon_decay, learning_rate, num_episodes, show_schedule = False):\n",
+    "def run_dqn_agent_endorse(sample_jobs, sample_candidates, batch_size, gamma, epsilon, epsilon_min, epsilon_decay, learning_rate, num_episodes, show_schedule = False):\n",
     "    # Initialise the environment\n",
-    "    env = EnvironmentDebiased(sample_jobs, sample_candidates)\n",
+    "    env = EnvironmentEndorse(sample_jobs, sample_candidates)\n",
     "    state = env.reset()\n",
     "    state_tensor = torch.tensor(state.to_tensor(), dtype=torch.float32).unsqueeze(0)\n",
     "\n",
@@ -225,7 +230,7 @@
     "    iteration = 0\n",
     "\n",
     "    # Initialise the agent\n",
-    "    agent = DQNAgent(state_size, action_size, env, batch_size, gamma, epsilon, epsilon_min, epsilon_decay, learning_rate)\n",
+    "    agent = DQNAgentEndorse(state_size, action_size, env, batch_size, gamma, epsilon, epsilon_min, epsilon_decay, learning_rate)\n",
     "    print(f\"State size: {state_size}, Action size: {action_size}\")\n",
     "\n",
     "    for _ in range(num_episodes):\n",
@@ -259,8 +264,8 @@
     "            print(f\"Episode {iteration}: Model loss = {loss}\")\n",
     "    \n",
     "    # Save and load the model\n",
-    "    agent.save_model('DQN_optimisation')\n",
-    "    agent.load_model('DQN_optimisation')\n",
+    "    agent.save_model('DQN_endorse')\n",
+    "    agent.load_model('DQN_endorse')\n",
     "        \n",
     "    gender_distribution, tot_reward = get_best_allocation(agent, env, show_schedule=True)\n",
     "\n",
@@ -273,7 +278,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def episode_dqn_agent_debiased(num_jobs, num_candidates, job_list, candidate_list, results_parameters_dqn, running_seed, num_episodes, results_df):\n",
+    "def episode_dqn_agent_endorse(num_jobs, num_candidates, job_list, candidate_list, results_parameters_dqn, running_seed, num_episodes, results_df):\n",
     "    # Initialise the data\n",
     "    random.seed(1)\n",
     "    sample_jobs = random.sample(job_list, num_jobs)\n",
@@ -293,7 +298,7 @@
     "\n",
     "    # Run the dqn agent\n",
     "    set_seed(running_seed)\n",
-    "    gender_distribution, total_reward, loss_list = run_dqn_agent_debiased(sample_jobs, sample_candidates, batch_size, gamma, epsilon, epsilon_min, epsilon_decay, learning_rate, num_episodes)\n",
+    "    gender_distribution, total_reward, loss_list = run_dqn_agent_endorse(sample_jobs, sample_candidates, batch_size, gamma, epsilon, epsilon_min, epsilon_decay, learning_rate, num_episodes)\n",
     "\n",
     "    # Evaluate the allocations\n",
     "    sampled_men = calculate_sampled_men(sample_candidates)\n",
@@ -302,7 +307,7 @@
     "    # Add the results to results_df\n",
     "    new_row = pd.DataFrame([{\"agent\": \"DQN\", \"running_seed\": running_seed, \"sample_seed\": 1, \"num_jobs\": num_jobs, \"num_candidates\": num_candidates, \n",
     "                             \"reward\": total_reward,  \"sampled_men_percent\": sampled_men, \"hired_men_percent\": hired_men,\n",
-    "                             \"data\": 'parity_data', \"debiased\": 'Yes'}])\n",
+    "                             \"data\": 'parity_data', \"endorse\": 'Yes'}])\n",
     "    results_df = pd.concat([results_df, new_row], ignore_index=True)\n",
     "\n",
     "    return results_df, loss_list"
@@ -335,11 +340,11 @@
    ],
    "source": [
     "# Read in the job data\n",
-    "file_path = '../../data/jobs_data_cleaned.csv'\n",
+    "file_path = '../../data/cleaned_data/jobs_cleaned.csv'\n",
     "jobs_df = pd.read_csv(file_path)\n",
     "\n",
     "# Read in the candidate data\n",
-    "file_path = '../../data/candidates_data_cleaned.csv'\n",
+    "file_path = '../../data/cleaned_data/candidates_cleaned.csv'\n",
     "candidates_df = pd.read_csv(file_path)\n",
     "\n",
     "# Create a parity data set\n",
@@ -390,26 +395,84 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. EPISODES (INITIAL)"
+    "## 3. EPISODES (DQN_BASIC)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read in the hyperparameter results\n",
-    "results_parameters_dqn = pd.read_csv('../../optimisation/optimisation_parity_data/results_parameters_dqn_parity.csv')\n",
+    "results_parameters_dqn = pd.read_csv('../optimisation_parity_data/results_parameters_dqn_parity.csv')\n",
     "\n",
     "# Initialise a dataframe to store the results\n",
-    "columns = [\"agent\", \"running_seed\", \"sample_seed\", \"num_jobs\", \"num_candidates\", \"reward\", \"sampled_men_percent\", \"hired_men_percent\", \"data\", \"debiased\"]\n",
+    "columns = [\"agent\", \"running_seed\", \"sample_seed\", \"num_jobs\", \"num_candidates\", \"reward\", \"sampled_men_percent\", \"hired_men_percent\", \"data\", \"endorse\"]\n",
     "dqn_results_df = pd.DataFrame(columns=columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>agent</th>\n",
+       "      <th>running_seed</th>\n",
+       "      <th>sample_seed</th>\n",
+       "      <th>num_jobs</th>\n",
+       "      <th>num_candidates</th>\n",
+       "      <th>reward</th>\n",
+       "      <th>sampled_men_percent</th>\n",
+       "      <th>hired_men_percent</th>\n",
+       "      <th>data</th>\n",
+       "      <th>endorse</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [agent, running_seed, sample_seed, num_jobs, num_candidates, reward, sampled_men_percent, hired_men_percent, data, endorse]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dqn_results_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -599,12 +662,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. RESULTS (INITIAL)"
+    "## 4. RESULTS (DQN_BASIC)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +700,7 @@
        "      <th>sampled_men_percent</th>\n",
        "      <th>hired_men_percent</th>\n",
        "      <th>data</th>\n",
-       "      <th>debiased</th>\n",
+       "      <th>endorse</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -690,13 +753,13 @@
        "1   DQN            1           1       20            100   -362280   \n",
        "2   DQN            1           1       50            100  -1405377   \n",
        "\n",
-       "   sampled_men_percent  hired_men_percent         data debiased  \n",
-       "0                 0.56           1.000000  parity_data       No  \n",
-       "1                 0.56           0.733333  parity_data       No  \n",
-       "2                 0.56           0.617647  parity_data       No  "
+       "   sampled_men_percent  hired_men_percent         data endorse  \n",
+       "0                 0.56           1.000000  parity_data      No  \n",
+       "1                 0.56           0.733333  parity_data      No  \n",
+       "2                 0.56           0.617647  parity_data      No  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,35 +770,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the dqn results to a csv file\n",
-    "dqn_results_df.to_csv(\"dqn_results_parity_data.csv\")"
+    "dqn_results_df.to_csv(\"dqn_results_parity.csv\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. LOSS (INITIAL)"
+    "## 5. LOSS (DQN_BASIC)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Store the loss_lists in a csv file to create graphs\n",
     "loss_list_df = pd.DataFrame({10: loss_list_10, 20: loss_list_20, 50: loss_list_50})\n",
-    "loss_list_df.to_csv(\"dqn_loss_parity_data.csv\")"
+    "loss_list_df.to_csv(\"dqn_loss_parity.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +871,7 @@
        "4  3.711366e+09  6.824820e+09  5.688139e+09"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,27 +884,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. EPISODES (DEBIASED)"
+    "## 6. EPISODES (DQN_ENDORSE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read in the hyperparameter results\n",
-    "results_parameters_dqn_debiased = pd.read_csv('../../optimisation/optimisation_debias/results_parameters_dqn_debiased.csv')\n",
-    "results_parameters_dqn_debiased = results_parameters_dqn_debiased[results_parameters_dqn_debiased['data'] == 'parity_data'].reset_index(drop=True)\n",
+    "results_parameters_dqn_endorse = pd.read_csv('../optimisation_endorse/results_parameters_dqn_endorse.csv')\n",
+    "results_parameters_dqn_endorse = results_parameters_dqn_endorse[results_parameters_dqn_endorse['data'] == 'parity_data'].reset_index(drop=True)\n",
     "\n",
     "# Initialise a dataframe to store the results\n",
-    "columns = [\"agent\", \"running_seed\", \"sample_seed\", \"num_jobs\", \"num_candidates\", \"reward\", \"sampled_men_percent\", \"hired_men_percent\", \"data\", \"debiased\"]\n",
-    "dqn_debiased_results_df = pd.DataFrame(columns=columns)"
+    "columns = [\"agent\", \"running_seed\", \"sample_seed\", \"num_jobs\", \"num_candidates\", \"reward\", \"sampled_men_percent\", \"hired_men_percent\", \"data\", \"endorse\"]\n",
+    "dqn_endorse_results_df = pd.DataFrame(columns=columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>agent</th>\n",
+       "      <th>running_seed</th>\n",
+       "      <th>sample_seed</th>\n",
+       "      <th>num_jobs</th>\n",
+       "      <th>num_candidates</th>\n",
+       "      <th>reward</th>\n",
+       "      <th>sampled_men_percent</th>\n",
+       "      <th>hired_men_percent</th>\n",
+       "      <th>data</th>\n",
+       "      <th>endorse</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [agent, running_seed, sample_seed, num_jobs, num_candidates, reward, sampled_men_percent, hired_men_percent, data, endorse]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dqn_endorse_results_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -887,12 +1008,12 @@
    ],
    "source": [
     "# 10 Jobs, 100 Candidates, running seed 1 (-122226.0)\n",
-    "dqn_debiased_results_df, loss_list_debiased_10 = episode_dqn_agent_debiased(10, 100, job_list, candidate_list, results_parameters_dqn_debiased, 1, 6000, dqn_debiased_results_df)"
+    "dqn_endorse_results_df, loss_list_endorse_10 = episode_dqn_agent_endorse(10, 100, job_list, candidate_list, results_parameters_dqn_endorse, 1, 6000, dqn_endorse_results_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -946,12 +1067,12 @@
    ],
    "source": [
     "# 20 Jobs, 100 Candidates, running seed 1 (-435563.8)\n",
-    "dqn_debiased_results_df, loss_list_debiased_20 = episode_dqn_agent_debiased(20, 100, job_list, candidate_list, results_parameters_dqn_debiased, 1, 6000, dqn_debiased_results_df)"
+    "dqn_endorse_results_df, loss_list_endorse_20 = episode_dqn_agent_endorse(20, 100, job_list, candidate_list, results_parameters_dqn_endorse, 1, 6000, dqn_endorse_results_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1025,19 +1146,19 @@
    ],
    "source": [
     "# 50 Jobs, 100 Candidates, running seed 1 (-1476196.7)\n",
-    "dqn_debiased_results_df, loss_list_debiased_50 = episode_dqn_agent_debiased(50, 100, job_list, candidate_list, results_parameters_dqn_debiased, 1, 6000, dqn_debiased_results_df)"
+    "dqn_endorse_results_df, loss_list_endorse_50 = episode_dqn_agent_endorse(50, 100, job_list, candidate_list, results_parameters_dqn_endorse, 1, 6000, dqn_endorse_results_df)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8. RESULTS (DEBIASED)"
+    "## 8. RESULTS (DQN_ENDORSE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1191,7 @@
        "      <th>sampled_men_percent</th>\n",
        "      <th>hired_men_percent</th>\n",
        "      <th>data</th>\n",
-       "      <th>debiased</th>\n",
+       "      <th>endorse</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1123,29 +1244,29 @@
        "1   DQN            1           1       20            100  -435563.8   \n",
        "2   DQN            1           1       50            100 -1476196.7   \n",
        "\n",
-       "   sampled_men_percent  hired_men_percent         data debiased  \n",
-       "0                 0.56           0.857143  parity_data      Yes  \n",
-       "1                 0.56           0.600000  parity_data      Yes  \n",
-       "2                 0.56           0.514286  parity_data      Yes  "
+       "   sampled_men_percent  hired_men_percent         data endorse  \n",
+       "0                 0.56           0.857143  parity_data     Yes  \n",
+       "1                 0.56           0.600000  parity_data     Yes  \n",
+       "2                 0.56           0.514286  parity_data     Yes  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dqn_debiased_results_df"
+    "dqn_endorse_results_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the dqn results to a csv file\n",
-    "dqn_debiased_results_df.to_csv(\"dqn_debiased_results_parity_data.csv\")"
+    "dqn_endorse_results_df.to_csv(\"dqn_results_parity_endorse.csv\")"
    ]
   }
  ],
